// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaprootUtils should convert taproot tree to hash tree 1`] = `
{
  "hash": {
    "data": [
      183,
      85,
      121,
      159,
      174,
      151,
      56,
      244,
      93,
      34,
      165,
      195,
      58,
      58,
      235,
      182,
      252,
      187,
      41,
      203,
      71,
      55,
      190,
      204,
      220,
      216,
      175,
      121,
      55,
      230,
      110,
      202,
    ],
    "type": "Buffer",
  },
  "left": {
    "hash": {
      "data": [
        214,
        199,
        128,
        229,
        173,
        226,
        45,
        20,
        21,
        0,
        119,
        252,
        154,
        50,
        126,
        138,
        134,
        144,
        180,
        204,
        181,
        248,
        104,
        162,
        39,
        139,
        222,
        26,
        212,
        66,
        140,
        179,
      ],
      "type": "Buffer",
    },
    "scriptHex": undefined,
  },
  "right": {
    "hash": {
      "data": [
        156,
        21,
        208,
        30,
        80,
        233,
        79,
        202,
        96,
        183,
        18,
        16,
        29,
        201,
        213,
        92,
        241,
        161,
        125,
        199,
        185,
        215,
        253,
        81,
        162,
        18,
        84,
        29,
        216,
        112,
        63,
        47,
      ],
      "type": "Buffer",
    },
    "scriptHex": undefined,
  },
}
`;

exports[`TaprootUtils should hash tap leafs 1`] = `
{
  "data": [
    214,
    199,
    128,
    229,
    173,
    226,
    45,
    20,
    21,
    0,
    119,
    252,
    154,
    50,
    126,
    138,
    134,
    144,
    180,
    204,
    181,
    248,
    104,
    162,
    39,
    139,
    222,
    26,
    212,
    66,
    140,
    179,
  ],
  "type": "Buffer",
}
`;

exports[`TaprootUtils should hash tap tweaks 1`] = `
{
  "data": [
    89,
    209,
    155,
    125,
    231,
    8,
    195,
    185,
    252,
    227,
    157,
    136,
    112,
    96,
    68,
    165,
    228,
    234,
    182,
    192,
    173,
    216,
    163,
    180,
    26,
    95,
    75,
    28,
    18,
    21,
    159,
    53,
  ],
  "type": "Buffer",
}
`;
